crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_await_outside_a_function_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "let invalid = Task.sleep(1).await\n"
---
alder::canonicalize::await_outside_async

  × `.await` needs an enclosing async body
   ╭─[/project/src/main.ald:1:15]
 1 │ let invalid = Task.sleep(1).await
   ·               ─────────┬─────────
   ·                        ╰── reported here
   ╰────
  help: use `async fn` or an `async { ... }` block
