crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_awaiting_a_non_task_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "async fn invalid() {\n    (42).await\n}\n"
---
alder::type::type_mismatch

  × type mismatch: expected `Task[a]`, found `Number`
   ╭─[/project/src/main.ald:2:5]
 1 │ async fn invalid() {
 2 │     (42).await
   ·     ─────┬────
   ·          ╰── await requires a Task value
 3 │ }
   ╰────
