crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_contradictory_associative_record_overlays_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn invalid(left, middle, right) {\n    let first = { ..{ ..left, ..middle }, ..right }\n    let second = { ..left, ..{ ..middle, ..right } }\n    let number: Number = first.value\n    let text: String = second.value\n    (number, text)\n}\n"
---
alder::type::type_mismatch

  × type mismatch: expected `{ b | value: String }`, found `{ a | value:
  │ Number }`
   ╭─[/project/src/main.ald:3:30]
 2 │     let first = { ..{ ..left, ..middle }, ..right }
 3 │     let second = { ..left, ..{ ..middle, ..right } }
   ·                              ──────────┬──────────
   ·                                        ╰── these types are incompatible
 4 │     let number: Number = first.value
   ╰────
