crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_generic_method_specialization_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "trait Convert[a] { fn convert(value: a, other: b) b }\nimpl Convert[Number] {\n    fn convert(value: Number, other: b) b { 42 }\n}\n"
---
alder::type::generic_specialization

  × this implementation does not work for every `b`
   ╭─[/project/src/main.ald:3:8]
 2 │ impl Convert[Number] {
 3 │     fn convert(value: Number, other: b) b { 42 }
   ·        ───┬───
   ·           ╰── the signature promises an independent `b`, but the body requires `Number`
 4 │ }
   ╰────
  help: use the same value generically, or give the declaration a concrete
        signature; a trait implementation must preserve the trait's generic
        contract
